--- a/spring-DB-Oracle-pre/src/main/resources/application.properties
+++ b/spring-DB-Oracle-pre/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.dbcp2.driver-class-name=oracle.jdbc.driver.OracleDriver
 
 mybatis.mapper-locations=classpath:/mapper/*.xml
 mybatis.type-aliases-package=com.kh.springdb.model
+
+###Hibernaion Configuration
+spring.jpa.hibernate.ddl-auto=update
+##만약에 테이블이 없거나 시퀀스가 없을 경우 자동으로 생성해줄 수 있도록 update 권한을 jpa한테 주는 설정
+spring.jpa.show-sql=true
