--- a/spring-JPA-Board/src/main/resources/application.properties
+++ b/spring-JPA-Board/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8082
 
 spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/XE
-spring.datasource.username=khbank
-spring.datasource.password=khbank
+spring.datasource.username=khcafe
+spring.datasource.password=khcafe
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 #spring.jpa.hibernate.ddl-auto -> 어플리케이션을 실행할 경우 JPA의 데이터베이스를 초기화 하거나 작업을 설정할 수 있도록 도와주는 옵션
